correction overflow-y

--- a/stylesheets/about-me.css
+++ b/stylesheets/about-me.css
@@ -3,12 +3,12 @@
 .about-me {
     width: 100vw;
     height: 100vh;
-    position: absolute;
+    /* position: absolute; */
     display: flex;
     flex-direction: column;
     animation: fade-in 2s;
     text-align: center;
-    display: none;
+    /* display: none; */
     animation-fill-mode: both;
 }
 
@@ -42,6 +42,7 @@
     font-style: italic;
     padding-left: 20px;
     padding-right: 20px;
+    padding-bottom: 10px;
 }
 
 @keyframes fade-in {
