--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -74,11 +74,10 @@ body {
     width: 100vw;
     height: 100vh;
     padding-top: 20px;
-    overflow-y: hidden;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* overflow-x: hidden; */
 }
 
 main {
